--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     EBS Informatica Valdivia, PYME Valdiviana que ofrece Servicios Informaticos para Particulares y Empresas en toda la XIV Region de los Rios.
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
+                    <button class="btn btn-lg btn-outline-info text-light me-4">Servicios</button>
                     <button class="btn btn-lg btn-info text-light">Contacto</button>
                 </div>
             </div>
@@ -66,43 +66,33 @@
     <section id="Acerca-de-mi" class="container text-center my-5">
 
 
-        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+        <h2 class="display-3 fw-bold my-4">Acerca de Nosotros</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            EBS Informatica se crea el año 2012 en la ciudad de Valdivia, somos 3 amigos que nos dedicamos a la Informatica, con la idea de dar un soporte informatico de calidad y accesible para todos los bolsillos.
         </p>
 
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <i class="fas fa-laptop fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Reparacion de Notebook</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Formateo e Instalacion de Software, Cambios de Pantalla, Cambios de Disco, Mantenimiento interno, Upgrade de Memoria Ram, Limpieza interna por derrame de liquidos etc..
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <i class="fas fa-desktop fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Armado de Equipos</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Armado y configuracion de Equipos a tu medida, Computadores para Gamers, Diseñadores e Ingenieria.
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <i class="fab fa-apple fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Equipos Mac</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Upgrade de Memoria Ram, Cambio de Disco Duro a SSD, Instalacion de OSX, Mantenimiento interno, Instalacion de Bootcamp (Windows), Cambios de Pantalla, Etc.
                 </p>
             </div>
         </div>
