Se agregaron 2 lineas en CSS a #menu1 y #menu 2 padding-top para alinear los menus que estan enlazados con las secciones

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="Acerca-de-mi" class="container text-center my-5">
 
 
-        <h2 class="display-3 fw-bold my-4">Acerca de Nosotros</h2>
+        <h2 class="display-3 fw-bold my-4" id="menu1">Acerca de Nosotros</h2>
 
         <p class="my-4">
             EBS Informatica se crea el año 2012 en la ciudad de Valdivia, somos 3 amigos que nos dedicamos a la Informatica, con la idea de dar un soporte informatico de calidad y accesible para todos los bolsillos.
@@ -101,7 +101,7 @@
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Servicios</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3" id="menu2">Servicios</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
